[tool.poetry]
name = "trywebsocketclient"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websocket_client = "^0.57.0"
flask = "^1.1.2"
flask-limiter = "^1.4"
cryptography = "^3.4.7"
cloudscraper = "^1.2.58"
jsonpickle = "^2.0.0"
pymongo = "^3.11.4"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
